# ml_dev_template

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
docs/: mkdocs.yml  requirements_dev.txt
docs/docs/: index.md  step-by-step.md
docs/site/: 404.html  index.html
docs/site/getting-started/: index.html
docs/site/search/: search_index.json
docs/site/step-by-step/: index.html
ml_dev_template/: __init__.py  dataset.py  features.py  plots.py
ml_dev_template/modeling/: predict.py  train.py
notebooks/: 2025-4-26-optuna-shap-多模型对比.ipynb  2025-4-26-shap-the-beginners-guide-optuna-rf-xgb-lgbm-catb.ipynb  all_in_one.ipynb  research.ipynb
references/optuna-shap-multi-models/: optuna-shap.ipynb  optuna-shap.py
