[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "ml_dev_template"
version = "0.0.1"
description = "A machine learning template project"
authors = [
    { name = "Zhoujin Huang" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "awscli",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "jupyterlab",
    "streamlit",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "pillow",
    "xgboost",
    "lightgbm",
    "catboost",
    "optuna",
    "matplotlib",
    "seaborn",
    "holoviews",
]

requires-python = "~=3.12.0"

[tool.ruff]
line-length = 99
src = ["ml_dev_template"]
include = ["pyproject.toml", "ml_dev_template/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_dev_template"]
force-sort-within-sections = true

